@@ -3,6 +3,9 @@
     * 0682 FIX: Allow overriding of active and custom checks by more specific rule...
     * 0267 FIX: Fixed auth.serials permission problem in check_mk standalone installation...
 
+    WATO:
+    * 0686 FIX: Fix replication with WATO if EC is enabled on master and disabled on slave
+
 
 1.2.4b7:
     Core & Setup:
